Revert "Replace Address field with MatriculationNumber as unique identifier"